Fixed some of the functions.

--- a/app/views/authentications/index.html.erb
+++ b/app/views/authentications/index.html.erb
@@ -1,6 +1,8 @@
+<div class="content new_level with_submenu clearfix">
+<div class="content_title">Authentication Services - Settings</div>
+<div class="content_container">
+  <div class="content_category">
 <section id="services_manage" class="services">
-
-  <h2>Authentication Services - Settings</h2>
   <% if @services.any? %>
       <h3>You can use these accounts to sign in</h3>
   <% end %>
@@ -45,3 +47,6 @@
   </div>
   <br style="clear:both" />
 </section>
+  </div>
+</div>
+</div>
