--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <div class="comment">
-  <div class="content">
+  <div>
     <div class="timestamp">
       Posted <%= time_ago_in_words(comment.created_at) %> ago by <%= comment.user.username %>.
     </div>
