--- a/app/views/shared/_masthead.html.erb
+++ b/app/views/shared/_masthead.html.erb
@@ -5,7 +5,7 @@
     <% @main_menu.each do |type, text, link, aclass| %>
       <li class="<%= aclass %>">
         <% if type == :text %>
-          <b><%= text.html_safe%></b>
+          <b><%= text %></b>
         <% else %>
           <%= link_to(text, link) %>
         <% end %>
@@ -26,7 +26,7 @@
 
 <div class="content_actions">
   <ul>
-    <li><%= link_to "Add smack", @parent.is_a?(College) ? new_college_smack_path(@parent) : new_conference_smack_path(@parent) %></li>
-    <li><%= link_to 'Add redemption', @parent.is_a?(College) ? new_college_redemption_path(@parent) : new_conference_redemption_path(@parent) %></li>
+    <li><%= link_to "Add Smack", @parent.is_a?(College) ? new_college_smack_path(@parent) : new_conference_smack_path(@parent) %></li>
+    <li><%= link_to 'Add Redemption', @parent.is_a?(College) ? new_college_redemption_path(@parent) : new_conference_redemption_path(@parent) %></li>
   </ul>
 </div>
