--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for([ @parent, @post], :validate => true) do |f| %>
     <%= render 'shared/error_messages', :object => f.object %>
-    <ul id="post_fields">
+    <ul class="no-bullets">
       <li>
         <div class="field">
           <%= f.label :title %>
