--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,26 @@
-<div class="actions">
-  <%= link_to 'Edit', method("edit_#{@post.postable_type.downcase}_#{@post.type.downcase}_path").call(@parent, @post), :class => 'button' if can? :update, @post %>
-  <%= link_to 'Delete', @post, :method => :delete, :confirm => "Delete Post?", :class => 'button' if can? :destroy, @post %>
-  <%= link_to('Report Abuse', report_post_path(@post), :class => 'button postreport', :id => "post_rep_#{@post.id}") if can? :report, @post %>
-</div>
-<h1><%= @post.title %></h1>
+<div class="content new_level with_submenu clearfix">
+  <div class="content_actions">
+    <ul>
+    <% if can? :update, @post %>
+      <li>
+        <%= link_to 'Edit', method("edit_#{@post.postable_type.downcase}_#{@post.type.downcase}_path").call(@parent, @post), :class => 'button' %>
+      </li>
+    <% end %>
+    <% if can? :destroy, @post %>
+      <li>
+        <%= link_to 'Delete', @post, :method => :delete, :confirm => "Delete Post?", :class => 'button' %>
+      </li>
+    <% end %>
+    <% if can? :report, @post %>
+      <li>
+        <%= link_to('Report Abuse', report_post_path(@post), :class => 'button postreport', :id => "post_rep_#{@post.id}") %>
+      </li>
+    <% end %>
+    </ul>
+  </div>
+<div class="content_title"><%= @post.title %></div>
+<div class="content_container">
+  <div class="content_category">
 <div class="post">
   <div class="top">
     posted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.try(:username) %>.
@@ -23,11 +40,11 @@
       </div>
     <% end %>
     <% unless @post.news_post.video_url.blank? %>
-      <div class="content"><%= youtube_embed(@post.news_post.video_url, true) %></div>
+      <div><%= youtube_embed(@post.news_post.video_url, true) %></div>
     <% end %>
   <% end %>
   <% if @post.video %>
-    <div class="content"><%= youtube_embed(@post.video.url, true) %></div>
+    <div><%= youtube_embed(@post.video.url, true) %></div>
   <% end %>
   <div class="summary"><%= @post.summary %>
     <% if @post.summary && params[:action] != 'show' %>
@@ -52,3 +69,6 @@
   </div>
 </div>
 <%= render 'shared/report_form' %>
+</div>
+</div>
+</div>
