--- a/app/views/posts/share_through_email_form.html.erb
+++ b/app/views/posts/share_through_email_form.html.erb
@@ -1,7 +1,7 @@
 <script type="text/javascript" src="http://www.plaxo.com/css/m/js/util.js"></script>
 <script type="text/javascript" src="http://www.plaxo.com/css/m/js/basic.js"></script>
 <script type="text/javascript" src="http://www.plaxo.com/css/m/js/abc_launcher.js"></script>
- <%= init_tinymce_hammer_if_required %>
+<%= javascript_include_tag "tinymce/tiny_mce" %>
 
 <script type="text/javascript">
   function onABCommComplete() {
@@ -9,6 +9,13 @@
     //alert($("#message_to").val());
   }
   $(document).ready(function() {
+
+    tinyMCE.init({
+      theme : "simple",
+      mode : "textareas"
+
+    });
+    tinyMCE.execCommand('mceAddControl', false, 'message_body2');
    
   });
 
@@ -53,6 +60,7 @@
       <td>
   <%#= text_area_tag("message[to]", @to_emails, {:rows => 1, :cols => 5}) %>
         <% if !params[:smack].present? %>
+
           <%= text_area_tag("message[to]", @to_emails, {:rows => 1, :cols => 5, :style => "height:80px;width:380px;padding-right:5px;margin-right:10px;margin-top:10px;"}) %>
           <% plaxo_path = "showPlaxoABChooser('message_to','"+plaxo_import_user_path(@user) +"'); return false"
           plaxo_path = '"'+plaxo_path+'"';
@@ -60,6 +68,7 @@
     <%#  raw('<a href="#" onclick='+plaxo_path+'><img src="http://www.plaxo.com/images/abc/buttons/add_button.gif" alt="Add from my address book" /></a>') %>
           <% message = " #{current_user.first_name} #{current_user.last_name} shared a post from campusmack.com" %>
         <% else %>
+          <input type="hidden" id="smack" name="smack" value="1"></input>
           <% @contact_groups = ContactGroup.find_all_by_user_id(current_user)  %>
           <div >
             <div style="min-width: 80px;">
@@ -121,11 +130,11 @@
 
     %>
 
-     
+
       <%=  hidden_field_tag "message[body1]", body %>
       <td><%= tinymce_tag("message[body2]","", :class => "mce-editor",
           :style => "height:125px;width:380px;padding-right:5px;margin-right:10px") %>
-       
+
       </td>
     </tr>
     <tr>
