--- a/app/views/contact_groups/add_to_group.js.erb
+++ b/app/views/contact_groups/add_to_group.js.erb
@@ -1,4 +1,8 @@
-
-$('#links_ul').append("<li><%= escape_javascript('<a href="/contacts?group_id='+@new_group_id.to_s+'">'+@new_group_name+'</a>').html_safe %></li>");
-<%= close_facebox()%>
-<%#*alert("closed");%>
+<% if(params[:group_type] == 'new') %>
+  <% if(!@group.new_record?) %>
+    $('#links_ul').append("<li><a href='<%= contacts_path(:group_id => @group.id) -%>'><%= @group.name -%></a></li>");
+    <%= close_facebox()%>
+  <% end %>
+<% else %>
+  <%= close_facebox()%>
+<% end %>
