--- a/app/views/contact_groups/add_to_group_form.erb
+++ b/app/views/contact_groups/add_to_group_form.erb
@@ -1,37 +1,35 @@
+<div id ="group_select">
+  <% @contact_groups = ContactGroup.find_all_by_user_id(current_user)  %>
+  <div  style='padding:10px; margin: 10px'>
+
+    <% if @contact_groups.present? %>
+      <%= '<input class="rbtn" type="radio" name="group_type" value="existing" checked="checked" />'.html_safe %>
+      <%=  "<span style='padding:10px'> Select Group </span>".html_safe %>
+      <%= select("group", 'id', @contact_groups.map {|u| [u.name,u.id]}, { :style => 'width:132px;' }) %>
+    <% end %>
+
+    <br/><br />
+
+    <input <% if !@contact_groups.present? %> <%=  'checked="checked"'.html_safe %> <% end %>
+      class="rbtn" type="radio" name="group_type"  value="new" />
+    <span > New Group </span>
+    <input type="text" name="new_group_name"/>
+  </div>
+<%#=   link_to "Add contacts", :controller => "contact_groups", :action => "add_to_group", :id => @profile %>
+  <div style="text-align: center;padding: 9px;">
+    <%= link_to("Add contacts", add_to_group_contact_groups_path(@contact_group), :id => "add_contact") %>
+  </div>
+</div>
+
 <script type="text/javascript" >
   $(document).ready(function(){
     $('#add_contact').click(function(){
-      //alert($('input:checkbox:checked.chk_box').map(function () {return this.value;}).get());
       $.ajax({
         type: "POST",
         url: "<%= add_to_group_contact_groups_path() -%>",
         data: $('#group_select :input').serialize() + "&" +$('input:checkbox:checked.chk_box').serialize()
       });
+      return false;
     });
-
   });
-
-
 </script>
-<div id ="group_select">
-  <% @contact_groups = ContactGroup.find_all_by_user_id(current_user)  %>
-  <div  style='padding:10px; margin: 10px'>
-
-  <% if @contact_groups.present? %>
-    <%= '<input class="rbtn" type="radio" name="group_type" value="existing" checked="checked" />'.html_safe %>
-    <%=  "<span style='padding:10px'> Select Group </span>".html_safe %>
-    <%= select("name", 'id', @contact_groups.map {|u| [u.name,u.id]}, { :style => 'width:132px;' }) %>
-  <% end %>
-
-  <br/><br />
-
-  <input <% if !@contact_groups.present? %> <%=  'checked="checked"'.html_safe %> <% end %>
-    class="rbtn" type="radio" name="group_type"  value="new" />
-  <span > New Group </span>
-  <input type="text" name="new_group_name"/>
-</div>
-<%#=   link_to "Add contacts", :controller => "contact_groups", :action => "add_to_group", :id => @profile %>
-  <div id="add_contact" style="text-align: center;padding: 9px;">
-    <%= link_to("Add contacts", add_to_group_contact_groups_path(@contact_group),
-      :method => "GET", :remote => true) %></div>
-</div>
